--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -17,44 +17,36 @@
 <div class="container marketing">
     <div class="row">
         <div class="col-lg-4">
-            <img class="rounded-circle" src="{{ MEDIA_URL }}user1.png" alt="Generic placeholder image" width="140"
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user5.png" alt="Generic placeholder image" width="140"
                 height="140">
-            <h2 class="green">Anna</h2>
-            <p>I was scared from all the old horror stories of kids being shunned or abandoned by their friends and
-                family
-                for their sexuality. I used Reach Out to tell my friends that 'someone they knew' was struggling to talk
-                about it. After recieving a number of encouraging messages it gave me the confidence to come out in
-                person
-                and shortly after told my parents! I'm finally feeling more like the real me.
+            <h2 class="red">Michael</h2>
+            <p>After my divorce I ended up living alone in an apartment closer to work. I had lost most of my friends because of what had
+                happened. I reached out to the people living in my apartment block for help and couldn't tell you at the time how surprised 
+                I was by the kindness of strangers. I have made many new friends and have been working hard to become better than the man I was
+                before.
             </p>
 
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="rounded-circle" src="{{ MEDIA_URL }}user2.png" alt="Generic placeholder image" width="140"
+            <img class="rounded-circle" src="{{ MEDIA_URL }}user4.png" alt="Generic placeholder image" width="140"
                 height="140">
-            <h2 class="red">Leeroy</h2>
-            <p>For a long time I felt alone in my interests. I don't enjoy football and felt left out at school because
-                of
-                it.
-                I used Reach Out to ask if any of the people I knew would be interested in hanging out to play
-                boardgames. I
-                now
-                have a close circle of friends and we meet up regularly to play Dungeons and Dragons!</p>
+            <h2 class="green">Zack</h2>
+            <p>Whilst away at university I told my parents that someone close to them (I) was planning on transitioning. My father didn't
+                respond and my mother was very dismissive and against the idea. But, with the support services I found through this site I have found the words
+                and strength to speak about my feelings more confidently. Despite not getting the response I had hoped for it pushed me in the
+                right direction to start making the changes I need, I am much happier with who I am. I have since come out about it to my parents
+                and with the conversations we had online, I think it gave them time to reflect on what they might have seen coming.
+            </p>
 
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-            <img class="rounded-circle kate" src="{{ MEDIA_URL }}user3.png" alt="Generic placeholder image" width="140"
+            <img class="rounded-circle kate" src="{{ MEDIA_URL }}user6.png" alt="Generic placeholder image" width="140"
                 height="140">
-            <h2 class="light-blue">Kate</h2>
-            <p>After my husband passed away I became incredibly reclusive and scared I was a burden on the people around
-                me.
-                When
-                I found this website I contacted the people I knew to ask for help. I was shocked at first that they
-                accepted
-                and wanted me to reach out to them for help despite not fully knowing who I was. My friendships have
-                become
-                deeper,
-                more meaningful and I have since found the confidence in myself to try dating again.
+            <h2 class="light-blue">Maria</h2>
+            <p>As a single mother I had struggled with alcohol abuse for a while. I used this platform to reach out to my friends to say that I
+                desperately needed help from people I could trust and that could keep the addiction I needed help fighting a secret. 
+                I have recieved a huge ammount of support, I have friends who help look after my child in the evenings when I go to my AA meetings,
+                I have been given a weath of information to help control my finances and I am making changes to better the lives of me and my child.
             </p>
 
         </div><!-- /.col-lg-4 -->
@@ -68,7 +60,7 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder green-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-user-plus"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-user-plus"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">The first thing you will need to do is register an account with us.
@@ -80,7 +72,7 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder dark-blue-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-check"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-check"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">Once you've verified your account, you can go to the reach out page where
@@ -92,7 +84,7 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder green-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-envelope"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-envelope"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">We've created a number of template messages to help you with various topics
@@ -107,7 +99,7 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder dark-blue-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-pencil"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-pencil"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">If the none of the templates suit your needs, you can select to craft your
@@ -119,14 +111,15 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder green-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-comments"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-comments"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">After sending your message, the recipients that you listed will recieve an
                             email
                             inviting them to chat. If they accept, they'll be brought to this website where you can send
                             each
-                            other messages through the website. Your identity will remain hidden unless you choose to tell
+                            other messages through the website. Your identity will remain hidden unless you choose to
+                            tell
                             them.
                         </p>
                     </div>
@@ -135,7 +128,7 @@
             <div class="col how-to-holder">
                 <div class="card shadow-sm">
                     <div class="icon-holder dark-blue-bg row align-items-center">
-                        <div class="icon-holder-icon white col"><i class="fa-solid fa-handshake-angle"></i></div>
+                        <div class="icon-holder-icon white col"><i class="icon fa-solid fa-handshake-angle"></i></div>
                     </div>
                     <div class="card-body">
                         <p class="card-text">If you're unable to get the response or help that you were hoping for,
@@ -148,6 +141,101 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="container marketing">
+    <div class="row">
+        <div class="col-lg-12 help-banner">
+            <h2>
+                Supports Available to You
+            </h2>
+            <p>If you or someoene who has reached out to you is struggling, we hope that the services below can help guide you in the right direction
+                on how to deal with these difficult topics of conversation or get you the help that is needed.
+            </p>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/helping-someone-else/" target="_blank"><img alt="A picture of two people under a tree." class="img-fluid media-image"
+                        src="https://www.mind.org.uk/media/8747/two-people-in-a-meadow.jpg?format=webp&quality=70" />
+                    <div class="media-body">
+                        <h1>Helping Someone Else</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/tips-for-everyday-living/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="{{ MEDIA_URL }}tips.png" />
+                    <div class="media-body">
+                        <h1>Tips for Everyday Living</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/drugs-and-treatments/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="https://www.mind.org.uk/media/8740/two-people-talking-sofa.jpg?format=webp&quality=70" />
+                    <div class="media-body">
+                        <h1>Therapies and Medication</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/legal-rights/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="https://www.mind.org.uk/media/8873/pencil-on-a-notebook.jpg?format=webp&quality=70" />
+                    <div class="media-body">
+                        <h1>Legal Rights</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/for-children-and-young-people/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="https://www.mind.org.uk/media/8678/person-wearing-headphones-grey-background.jpg?format=webp&quality=70" />
+                    <div class="media-body">
+                        <h1>Information for Young People</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/helplines/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="{{ MEDIA_URL }}helpline.png" />
+                    <div class="media-body">
+                        <h1>Helplines</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/information-support/drugs-and-treatments/talking-therapy-and-counselling/how-to-find-a-therapist/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="{{ MEDIA_URL }}therapy.png" />
+                    <div class="media-body">
+                        <h1>How to Find a Therapist</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="media"></div>
+            <div class="media"><a href="https://www.mind.org.uk/need-urgent-help/" target="_blank"><img alt="" class="img-fluid media-image"
+                        src="{{ MEDIA_URL }}crisis.png" />
+                    <div class="media-body">
+                        <h1>Dealing with Crisis</h1>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+        
     </div>
 </div>
 
