--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,11 +17,16 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-footer p, nav p {
+footer p,
+nav p {
     font-size: 1rem;
 }
 
-h1, h2, h3 ,h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Nunito', san-serif;
 }
 
@@ -121,8 +126,6 @@ h1, h2, h3 ,h4, h5 {
     border-radius: 5px;
 }
 
-}
-
 /* Index Page CSS */
 
 /* .jumbotron {
@@ -174,11 +177,16 @@ h1, h2, h3 ,h4, h5 {
 }
 
 .icon-holder {
-    height: 14rem; 
+    height: 14rem;
     text-align: center;
     margin: 0px;
     border-radius: 3px;
-    font-size: 7.5rem;   
+    font-size: 7.5rem;
+}
+
+.icon-holder:hover .icon {
+    transform: scale(1.25);
+    transition-duration: 0.5s;
 }
 
 /* ------------------------------- bootstrap toasts */
@@ -200,10 +208,10 @@ h1, h2, h3 ,h4, h5 {
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -243,3 +251,45 @@ h1, h2, h3 ,h4, h5 {
     border-bottom-color: #343a40 !important;
 }
 
+/* Support Images */
+
+.media {
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+}
+
+.media-image {
+    display: block;
+}
+
+.media-body {
+    background: rgba(48, 56, 67, 0.9);
+    bottom: 0;
+    color: white;
+    font-size: 1em;
+    left: 0;
+    opacity: 0;
+    overflow: hidden;
+    padding: 1rem;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    right: 0;
+    -webkit-transition: 0.6s;
+    transition: 0.6s;
+}
+
+.media-body:hover {
+    opacity: 1;
+}
+
+.media-body h2 {
+    margin-top: 0;
+    color: #fff;
+}
+
+.help-banner {
+    text-align: center;
+    padding-top: 3rem;
+}
